# crates/goose-server/src/openapi.rs
@@ -447,6 +447,8 @@ derive_utoipa!(Icon as IconSchema);
         super::routes::session::import_session,
         super::routes::session::update_session_user_recipe_values,
         super::routes::session::fork_session,
+        super::routes::session::archive_session,
+        super::routes::session::unarchive_session,
         super::routes::session::get_session_extensions,
         super::routes::schedule::create_schedule,
         super::routes::schedule::list_schedules,
